# framey

./: .gitignore  README.md  pyproject.toml  test_album_cards.py  test_framey.py
album_cards/: __init__.py  info.css  info.html.moustache  make.py  make_sample.py
client/: CONFIG.py.example  WIFI_CONFIG.py.example  main.py  network_manager.py
framey/: __init__.py  info.css  info.html.moustache  make.py  make_sample.py  server.py  spotify.py  spotify_now_playing.css  spotify_now_playing.html.moustache  weather.html.moustache  weather.py
