[tool.poetry]
name = "framey"
version = "0.1.0"
description = ""
authors = ["Erik Hetzner <egh@e6h.org>"]
readme = "README.md"
packages = [{include = "framey"}]

[tool.poetry.dependencies]
python = "^3.10"
python3-discogs-client = "*"
pillow = "*"
requests = "*"
html2image = "*"
chevron = "*"
spotipy = "*"
qrcode = "*"
flask = "*"
gunicorn = "*"
hitherdither = {git = "https://github.com/hbldh/hitherdither.git", branch = "master"}

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
requests-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
